Draft: 회원 인증 기능 구현 (#5)
* docs : codex agents.md추가 및 readme.md 보완

* feat: 회원가입 유스케이스 구현

* feat: 회원가입 비밀번호 암호화 구현

* feat: 회원가입 비밀번호 암호화 구현

* feat: 회원가입 가입 API 추가

* feat: 회원 도메인 테스트 추가

* feat: 회원 등록 레파지토리 테스트 & 관련 설정 추가

* refactor: 공통 엔티티 추가

* feat: 회원 가입을 위한 기본 설정 추가

* fix: security-config 버그 수정

* fix: security-config 버그 수정

* feat: 컨트롤러 테스트 및 예외처리 추가

* feat: 패키지 구조 정리 (#8)

* feat: 패키지 구조 정리

* refactor: 패키지 구조 개선

* refactor: 누락된 패키지 구조 변경 반영 (#9)

* feat: 로그인 API 및 JWT 인증 처리 추가 (#10)

* docs: PR템플릿 추가

* feat: 로그인 기능 구현

* feat: login

* feat: 로그인 테스트 수정, pr.md 추가

* refactor: security 인증 필터 리펙토링
